@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 2.4.29 unreleased
+
+* for Rails 4.1, use the Figaro master pending next release of Figaro
+
 h2. 2.4.28 February 20, 2014
 
 * issue #282 resolved, newest Devise release supports Rails 4.1
